2006-01-28  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* tests/fa_symbols_at.test: Fixed use of duplicate test names.
	* tests/fa_symbol.test: 
	* tests/faop_remeps.test: 
	* tests/faop_reverse.test: 

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.test: More boilerplate simplified via use of test support.
	* dexec.test:
	* fa.test:
	* faop.test:

	* tests/faop_trim.test:  Replaced old 'queryconstraint' with proper
	* tests/fa_serial.test: 'testConstraint' call.
	* tests/fa_is_useful.test: 
	* tests/fa_is_deterministic.test: 
	* tests/da_cons.test: 
	* tests/de_cons.test: 

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* dacceptor.test: Hooked into the new common test support code.
	* dexec.test:
	* fa.test:
	* faop.test:

2006-01-10  Andreas Kupries <andreask@activestate.com>

	* dacceptor.test: Fixed [SF Tcllib Bug 1316040]. Uncluttering test
	* dexec.test:     output.
	* fa.test:
	* faop.test:
	* tests/da_accept.test:
	* tests/de_exec.test:

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-09-20  Andreas Kupries  <akupries@shaw.ca>

	* tests/fa_final.test: Fixed problems of testsuite with
	* tests/fa_next.test:  Tcl 8.5, caused by changes to the
	* tests/fa_start.test: proc error messages.
	* tests/fa_state.test: 
	* tests/fa_symbol.test: 

2004-11-22  Andreas Kupries <andreask@activestate.com>

	* pkgIndex.tcl: Fixed usage of wrong file for package 'dacceptor'.

2004-11-11  Andreas Kupries <andreask@activestate.com>

	* fa.man: Removed duplicate description of method
	  startstates. Fixed typos (wrong term, missing word).

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-08-05  Andreas Kupries  <andreask@activestate.com>

	* tests/fa_is_deterministic.test:
	* tests/fa_is_useful.test: