@@ -3,7 +3,7 @@
 #
 # Copyright (c) 2004 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 #
-# RCS: @(#) $Id: dexec.test,v 1.7 2006/01/23 08:18:15 andreas_kupries Exp $
+# RCS: @(#) $Id: dexec.test,v 1.8 2006/06/15 18:06:16 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -19,8 +19,8 @@ support {
     use      struct/sets.tcl struct::set
     use      struct/list.tcl struct::list
 
-    useLocal fa.tcl   grammar::fa
-    useLocal faop.tcl grammar::fa::op
+    useLocal     faop.tcl grammar::fa::op
+    useLocalKeep fa.tcl   grammar::fa
 
     useLocalFile tests.support
 }
