@@ -3,7 +3,7 @@
 #
 # Copyright (c) 2004 by Andreas Kupries <andreas_kupries@users.sourceforge.net>
 #
-# RCS: @(#) $Id: fa.test,v 1.8 2006/01/23 08:18:15 andreas_kupries Exp $
+# RCS: @(#) $Id: fa.test,v 1.9 2006/06/15 18:06:16 andreas_kupries Exp $
 
 # -------------------------------------------------------------------------
 
@@ -20,9 +20,10 @@ support {
     use      struct/list.tcl struct::list
 
     useLocalFile tests.support
+    useLocal     faop.tcl grammar::fa::op
 }
 testing {
-    useLocal fa.tcl grammar::fa
+    useLocalKeep fa.tcl grammar::fa
 }
 
 # -------------------------------------------------------------------------
